--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-opencv-python-headless
-numpy
+streamlit==1.47.0
+opencv-python-headless==4.12.0.88
+numpy<2.0
 tensorflow==2.14.0
-keras==2.14.0
+pillow
