--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-opencv-python-headless
-numpy
-tensorflow
+streamlit==1.47.0
+opencv-python-headless==4.12.0.88
+numpy==1.26.4
+tensorflow==2.13.0
 pillow
